--- a/RPESystem/templates/index.html
+++ b/RPESystem/templates/index.html
@@ -26,17 +26,19 @@
         <div class="collapse navbar-collapse">
             <div>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link mr-2" href="#">News</a>
-                    </li>
+                    {% for cat in categories %}
+                        {% if cat.id == category.id %}
+                            <li class="nav-item active">
+                                <a class="nav-link mr-2" href="/?cat_id={{ cat.id }}">{{ cat.title }}</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link mr-2" href="/?cat_id={{ cat.id }}">{{ cat.title }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
                     <li class="nav-item">
-                        <a class="nav-link mr-2" href="#">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mr-2" href="#">Previews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mr-2" href="#">Rank</a>
+                                <a class="nav-link mr-2" href="{% url 'home:predict' %}">Predict</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +51,7 @@
                 <li class="nav-item dropdown" v-if="is_login">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" @click="show_menu_click">[[username]]</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="display: block" v-show="show_menu">
-                        <a class="dropdown-item" href="../static/write_blog.html">Write a blog</a>
+                        <a class="dropdown-item" href="{% url 'users:writead' %}">Write Rental Ads</a>
                         <a class="dropdown-item" href='{% url 'users:center' %}'>Personal Information</a>
                         <a class="dropdown-item" href='{% url 'users:logout' %}'>Log out</a>
                     </div>
@@ -63,177 +65,34 @@
 
 
 <div class="container">
-    
-    <div class="row mt-2">
-            <!-- 文章内容 -->
-            <!-- 标题图 -->
+    {% for ad in ads %}
+        <div class="row mt-2">
             <div class="col-3">
-                <img src="../static/img/1.jpg" alt="avatar" style="max-width:100%; border-radius: 20px">
+                <img src="{{ ad.photo.url }}" alt="photo" style="border-radius: 20px; max-width: 100%">
             </div>
             <div class="col">
-                <!-- 栏目 -->
-                <a  role="button" href="#" class="btn btn-sm mb-2 btn-warning">Python</a>
-            <!-- 标签 -->
-                <span>
-                        <a href="#" class="badge badge-secondary">Django</a>
-                </span>
-                <!-- 标题 -->
+                <a  role="button" href="/?cat_id={{ ad.category.id }}" class="btn btn-sm mb-2 btn-warning">{{ ad.category.title }}</a>
                 <h4>
-                    <b><a href="../static/detail.html" style="color: black;">如何更好的学习Django呢？</a></b>
+                    <b><a href="{% url 'home:detail' %}?id={{ ad.id }}" style="color: black;">{{ ad.title }}  {{ ad.price }} руб./ За месяц</a></b>
                 </h4>
-                <!-- 摘要 -->
-                <div>
-                    <p style="color: gray;">
-                        Python下有许多款不同的 Web 框架。Django是重量级选手中最有代表性的一位。许多成功的网站和APP都基于Django。Django是一个开放源代码的Web应用框架，由Python写成。
-                    </p>
-                </div>
-                <!-- 注脚 -->
                 <p>
-                    <!-- 查看、评论、时间 -->
-                    <span><i class="fas fa-eye" style="color: lightskyblue;"></i>590&nbsp;&nbsp;&nbsp;</span>
-                    <span><i class="fas fa-comments" style="color: yellowgreen;"></i>11&nbsp;&nbsp;&nbsp;</span>
-                    <span><i class="fas fa-clock" style="color: pink;"></i>2019-10-22</span>
+                    <span>Area: {{ ad.square }} м2</span>
+                </p>
+                <p>
+                    <span>Metro: {{ ad.metro }}</span>
+                </p>
+                <p>
+
+                    <span><i class="fas fa-eye" style="color: lightskyblue;"></i>{{ ad.total_views }}</span>
+                    <span><i class="fas fa-comments" style="color: yellowgreen;"></i>{{ ad.comments_count }}</span>
+                    <span><i class="fas fa-clock" style="color: pink;"></i>{{ ad.created|date }}</span>
                 </p>
             </div>
             <hr style="width: 100%;"/>
     </div>
+    {% endfor %}
 
-    <div class="row mt-2">
-        <!-- 文章内容 -->
-        <!-- 标题图 -->
-        <div class="col-3">
-            <img src="../static/img/1.jpg" alt="avatar" style="max-width:100%; border-radius: 20px">
-        </div>
-        <div class="col">
-            <!-- 栏目 -->
-            <a  role="button" href="#" class="btn btn-sm mb-2 btn-warning">Python</a>
-            <!-- 标签 -->
-            <span>
-                        <a href="#" class="badge badge-secondary">Django</a>
-                </span>
-            <!-- 标题 -->
-            <h4>
-                <b><a href="../static/detail.html" style="color: black;">如何更好的学习Django呢？</a></b>
-            </h4>
-            <!-- 摘要 -->
-            <div>
-                <p style="color: gray;">
-                    Python下有许多款不同的 Web 框架。Django是重量级选手中最有代表性的一位。许多成功的网站和APP都基于Django。Django是一个开放源代码的Web应用框架，由Python写成。
-                </p>
-            </div>
-            <!-- 注脚 -->
-            <p>
-                <!-- 转发、评论、时间 -->
-                <span><i class="fas fa-eye" style="color: lightskyblue;"></i>590&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-comments" style="color: yellowgreen;"></i>11&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-clock" style="color: pink;"></i>2019-10-22</span>
-            </p>
-        </div>
-        <hr style="width: 100%;"/>
-    </div>
 
-    <div class="row mt-2">
-        <!-- 文章内容 -->
-        <!-- 标题图 -->
-        <div class="col-3">
-            <img src="../static/img/1.jpg" alt="avatar" style="max-width:100%; border-radius: 20px">
-        </div>
-        <div class="col">
-            <!-- 栏目 -->
-            <a  role="button" href="#" class="btn btn-sm mb-2 btn-warning">Python</a>
-            <!-- 标签 -->
-            <span>
-                        <a href="#" class="badge badge-secondary">Django</a>
-                </span>
-            <!-- 标题 -->
-            <h4>
-                <b><a href="../static/detail.html" style="color: black;">如何更好的学习Django呢？</a></b>
-            </h4>
-            <!-- 摘要 -->
-            <div>
-                <p style="color: gray;">
-                    Python下有许多款不同的 Web 框架。Django是重量级选手中最有代表性的一位。许多成功的网站和APP都基于Django。Django是一个开放源代码的Web应用框架，由Python写成。
-                </p>
-            </div>
-            <!-- 注脚 -->
-            <p>
-                <!-- 转发、评论、时间 -->
-                <span><i class="fas fa-eye" style="color: lightskyblue;"></i>590&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-comments" style="color: yellowgreen;"></i>11&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-clock" style="color: pink;"></i>2019-10-22</span>
-            </p>
-        </div>
-        <hr style="width: 100%;"/>
-    </div>
-
-    <div class="row mt-2">
-        <!-- 文章内容 -->
-        <!-- 标题图 -->
-        <div class="col-3">
-            <img src="../static/img/1.jpg" alt="avatar" style="max-width:100%; border-radius: 20px">
-        </div>
-        <div class="col">
-            <!-- 栏目 -->
-            <a  role="button" href="#" class="btn btn-sm mb-2 btn-warning">Python</a>
-            <!-- 标签 -->
-            <span>
-                        <a href="#" class="badge badge-secondary">Django</a>
-                </span>
-            <!-- 标题 -->
-            <h4>
-                <b><a href="../static/detail.html" style="color: black;">如何更好的学习Django呢？</a></b>
-            </h4>
-            <!-- 摘要 -->
-            <div>
-                <p style="color: gray;">
-                    Python下有许多款不同的 Web 框架。Django是重量级选手中最有代表性的一位。许多成功的网站和APP都基于Django。Django是一个开放源代码的Web应用框架，由Python写成。
-                </p>
-            </div>
-            <!-- 注脚 -->
-            <p>
-                <!-- 转发、评论、时间 -->
-                <span><i class="fas fa-eye" style="color: lightskyblue;"></i>590&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-comments" style="color: yellowgreen;"></i>11&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-clock" style="color: pink;"></i>2019-10-22</span>
-            </p>
-        </div>
-        <hr style="width: 100%;"/>
-    </div>
-
-    <div class="row mt-2">
-        <!-- 文章内容 -->
-        <!-- 标题图 -->
-        <div class="col-3">
-            <img src="../static/img/1.jpg" alt="avatar" style="max-width:100%; border-radius: 20px">
-        </div>
-        <div class="col">
-            <!-- 栏目 -->
-            <a  role="button" href="#" class="btn btn-sm mb-2 btn-warning">Python</a>
-            <!-- 标签 -->
-            <span>
-                        <a href="#" class="badge badge-secondary">Django</a>
-                </span>
-            <!-- 标题 -->
-            <h4>
-                <b><a href="../static/detail.html" style="color: black;">如何更好的学习Django呢？</a></b>
-            </h4>
-            <!-- 摘要 -->
-            <div>
-                <p style="color: gray;">
-                    Python下有许多款不同的 Web 框架。Django是重量级选手中最有代表性的一位。许多成功的网站和APP都基于Django。Django是一个开放源代码的Web应用框架，由Python写成。
-                </p>
-            </div>
-            <!-- 注脚 -->
-            <p>
-                <!-- 转发、评论、时间 -->
-                <span><i class="fas fa-eye" style="color: lightskyblue;"></i>590&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-comments" style="color: yellowgreen;"></i>11&nbsp;&nbsp;&nbsp;</span>
-                <span><i class="fas fa-clock" style="color: pink;"></i>2019-10-22</span>
-            </p>
-        </div>
-        <hr style="width: 100%;"/>
-    </div>
-    <!-- 页码导航 -->
     <div class="pagenation" style="text-align: center">
         <div id="pagination" class="page"></div>
     </div>
